# sirep2

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  mypy.ini  pyproject.toml  requirements.txt
.codex/: config.toml
.github/scripts/: context_analyzer.py
.github/workflows/: context-analysis.yml
UI/: app.js
api/: __init__.py  app.py  dependencies.py  models.py  security.py
api/routers/: __init__.py  auth.py  pipeline.py  plans.py  treatment.py
app/: __init__.py  api.py
docs/: api.md  database.md
docs/db_patches/: 20241007_plan_blocking.sql
domain/: __init__.py  enums.py  pipeline.py  plan_block.py  treatment.py
infra/: __init__.py  audit.py  config.py  db.py  repositories.py  runtime_credentials.py
infra/repositories/: __init__.py  _helpers.py  dto.py  events.py  lookups.py  occurrences.py  plan_block.py  plans.py  treatment.py
psycopg/: __init__.py  errors.py  pq.py  rows.py
psycopg/types/: __init__.py  json.py
psycopg_pool/: __init__.py
scripts/: clear_cache.py  export_repo_txt.py  seed_fake_data.py
services/: __init__.py  base.py  gestao_base.py  orchestrator.py  plans.py  pw3270.py  treatment.py
services/gestao_base/: __init__.py  audit.py  collectors.py  constants.py  models.py  parcelas.py  persistence.py  pipeline.py  portal.py  service.py  terminal.py  utils.py
shared/: auth.py  config.py  text.py
sirep/: __init__.py
sirep/api/: app.py  models.py
sirep/app/: __init__.py  api.py
sirep/domain/: __init__.py  pipeline.py
sirep/infra/: __init__.py  config.py  repositories.py  runtime_credentials.py
sirep/services/: __init__.py  base.py  orchestrator.py
tests/: conftest.py  test_auth_api.py  test_db_session.py  test_infra_audit.py  test_pipeline_context.py  test_portal.py  test_shared_auth.py  test_shared_config.py
tests/api/: test_plans_router.py  test_treatment_router.py
tests/domain/: test_pipeline_state.py
tests/infra/: test_plans_repository.py
tests/scripts/: test_clear_cache.py
ui/: __init__.py  index.html  login.html
ui/css/: auth.css  base.css  (+4 more)
(+21 files in other folders)
